Fixed navbar collapsing on mobile and slimmed down CSS

--- a/public/less/cookiesync.less
+++ b/public/less/cookiesync.less
@@ -1,4 +1,76 @@
-@import "bootstrap.less";
+// Core variables and mixins
+@import "variables.less";
+@import "mixins.less";
+
+// Variable overrides
+@navbar-default-color:             @link-color;
+@navbar-default-bg:                #fff;
+@navbar-default-border:            none;
+
+// Navbar links
+@navbar-default-link-color:                @link-color;
+@navbar-default-link-hover-color:          @link-hover-color;
+@navbar-default-link-hover-bg:             transparent;
+@navbar-default-link-active-color:         #555;
+@navbar-default-link-active-bg:            darken(@navbar-default-bg, 6.5%);
+@navbar-default-link-disabled-color:       #ccc;
+@navbar-default-link-disabled-bg:          transparent;
+
+// Navbar brand label
+@navbar-default-brand-color:               @navbar-default-link-color;
+@navbar-default-brand-hover-color:         darken(@navbar-default-brand-color, 10%);
+@navbar-default-brand-hover-bg:            transparent;
+
+// Navbar toggle
+@navbar-default-toggle-hover-bg:           #ddd;
+@navbar-default-toggle-icon-bar-bg:        #888;
+@navbar-default-toggle-border-color:       #ddd;
+
+// Reset
+@import "normalize.less";
+// @import "print.less";
+
+// Core CSS
+@import "scaffolding.less";
+@import "type.less";
+@import "code.less";
+@import "grid.less";
+@import "tables.less";
+@import "forms.less";
+@import "buttons.less";
+
+// Components
+@import "component-animations.less";
+@import "glyphicons.less";
+@import "dropdowns.less";
+// @import "button-groups.less";
+@import "input-groups.less";
+@import "navs.less";
+@import "navbar.less";
+// @import "breadcrumbs.less";
+@import "pagination.less";
+@import "pager.less";
+@import "labels.less";
+@import "badges.less";
+@import "jumbotron.less";
+// @import "thumbnails.less";
+@import "alerts.less";
+// @import "progress-bars.less";
+// @import "media.less";
+@import "list-group.less";
+@import "panels.less";
+@import "wells.less";
+@import "close.less";
+
+// Components w/ JavaScript
+// @import "modals.less";
+@import "tooltip.less";
+@import "popovers.less";
+// @import "carousel.less";
+
+// Utility classes
+@import "utilities.less";
+@import "responsive-utilities.less";
 
 .container .jumbotron {
   background: none;
